<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/title_checkout"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_StudentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1.18"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/studentID"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/studentID_edittext"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_BookID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1.18"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="@string/bookID"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bookID_edittext"
            android:layout_width="520dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_DatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:text="@string/date"
            android:textSize="18sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker2"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:calendarTextColor="@android:color/black"
            android:datePickerMode="spinner"
            android:headerBackground="@android:color/holo_blue_bright" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_weight="1.18"
        android:orientation="horizontal">


        <Button
            android:id="@+id/checkout_btn"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/checkout_btn" />

        <Button
            android:id="@+id/return_btn"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/return_btn" />

    </LinearLayout>

    <Button
        android:id="@+id/summary_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:text="@string/Summary" />

    <Button
        android:id="@+id/goBack_btn2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/goBack_btn" />

</LinearLayout>
